rewrite style in scss

--- a/_sass/typo.scss
+++ b/_sass/typo.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";
+@import "predefine";
 
 /* 防止用户自定义背景颜色对网页的影响，添加让用户可以自定义字体 */
 article {
-    color: #333;
+    color: $text;
     background: #fff;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -60,7 +61,7 @@ blockquote {
     position: relative;
     color: #999;
     font-weight: 400;
-    border-left: 1px solid #1abc9c;
+    border-left: 1px solid $theme;
     padding-left: 1em;
     margin: 1em 3em 1em 2em;
 }
@@ -128,7 +129,7 @@ sub {
 /* 让链接在 hover 状态下显示下划线 */
 
 .typo a {
-    color: #1abc9c;
+    color: $theme;
 }
 
 /*
@@ -138,7 +139,7 @@ sub {
 */
 
 .typo a:hover {
-    border-bottom: 1px solid #1abc9c;
+    border-bottom: 1px solid $theme;
 }
 
 .typo a:hover {
