--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,5 @@ layout: default
 title: {{ page.title }}
 ---
 
-<link rel="stylesheet" href="/diary/css/syntax.css">
-<link rel="stylesheet" href="/diary/css/typo.css">
+<link rel="stylesheet" href="/assets/css/syntax.css">
 {{ page.content }}
