--- a/_sass/paper.scss
+++ b/_sass/paper.scss
@@ -10,6 +10,7 @@
     position: relative;
     padding: 5rem 5rem;
     background-color: #fff;
+    min-height: 578px;
     box-shadow:
             0 0 3px rgba(0, 0, 0, 0.1),
             -5px -5px 10px rgba(0, 0, 0, 0.04),
