fix relative url by baseurl

--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -103,4 +103,4 @@
     var activeArticle = new Date().toLocaleDateString();
     {% endif %}
 </script>
-<script type="text/javascript" src="/assets/js/calendar.js"></script>
+<script type="text/javascript" src="{{ "/assets/js/calendar.js" | prepend: site.baseurl }}"></script>
