--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -24,4 +24,16 @@
     footer {
         padding: 2rem 1rem;
     }
+    #dateTable {
+        width: 100%;
+        padding: 0;
+    }
+    #calMonth {
+        overflow: scroll;
+    }
+    .cal-week, .cal-body-day, #calHeader {
+        padding-left: 1em;
+        padding-right: 1em;
+        box-sizing: border-box;
+    }
 }
